plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies{
	implementation 'com.razorpay:razorpay-java:1.4.10'
	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
//	implementation 'redis.clients:jedis:7.2.0' // when we want to use jedis instaed of lattuce which is default
	//swagger - not giving support spring boot 4 for now
//	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.17")
   // Source: https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-client
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	// Source: https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.7'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.7'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.7'
	implementation 'org.modelmapper:modelmapper:3.2.4'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-mysql'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
//	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
//	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
//	testCompileOnly 'org.projectlombok:lombok'
//	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
//	testAnnotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
}

tasks.named('test') {
	useJUnitPlatform()
}
